--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Hello + world</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>Hello + World</h1>
     <p>This site is deployed via GitHub Actions</p>
   </body>
 </html>
